<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bank"
        android:layout_margin="8dp"
        android:padding="@dimen/value_10"
        android:elevation="2dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBankLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp"
            android:scaleType="fitXY" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/BankName"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="::"
                    android:textColor="@color/black"
                    android:textSize="16dp" />


                <com.VijayAssayCenter.font.MyTextViewBold
                    android:id="@+id/tvBankName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    tool:text="State Bank of Inida" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/AccountName"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="::"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:id="@+id/tvAccountName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    tool:text="jwellers" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/AccountNo"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="::"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:id="@+id/tvAccountNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    tool:text="00000000000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/IFSCCode"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="::"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:id="@+id/tvIFSCCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    tool:text="0000000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/BranchName"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="::"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <com.VijayAssayCenter.font.MyTextViewBold
                    android:id="@+id/tvBranchName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    tool:text="Maninagar" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>